Removing the output from unzipping

--- a/combinedMethod.ipynb
+++ b/combinedMethod.ipynb
@@ -21,12 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "HgqYqsSlt_Sv"
       },
       "outputs": [],
       "source": [
+        "\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
@@ -5456,6 +5457,7 @@
       ],
       "source": [
         "!wget http://images.cocodataset.org/zips/train2017.zip\n",
+        "%%capture\n",
         "!unzip train2017.zip"
       ]
     },
@@ -5884,7 +5886,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtBUNfFMoHyhoQTOkuFvr4",
+      "authorship_tag": "ABX9TyMNyUZD3ER7iceG9lI2e26o",
       "include_colab_link": true
     },
     "kernelspec": {
