Some tweaks to the notebook and changing the number_of_images parameter to 10000

--- a/creating_datasets.ipynb
+++ b/creating_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPZ5glA8xfOgT4xTVNxxyBv",
+      "authorship_tag": "ABX9TyOrdk8+t5JwXssb3Xf94RMc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "aJ51dOYoxBuO"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -69,16 +69,16 @@
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "drive.mount('/content/gdrive', force_remount=True)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KA9vEqte4UYd",
-        "outputId": "23c0ac97-a171-4d19-979e-b5ff1e936512"
+        "outputId": "fb740829-079c-47de-8e13-1250b4d6a90d"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,20 +102,22 @@
       "cell_type": "code",
       "source": [
         "\"\"\" PARAMETERS \"\"\"\n",
-        "number_of_images = 10 # how many images from the COCO dataset, which will be used as content images, you want to download\n",
+        "number_of_images = 10000 # how many images from the COCO dataset, which will be used as content images, you want to download\n",
         "dataset_dir = \"/content/gdrive/MyDrive/content_dataset\" # where you want to save the content images\n",
-        "train_ratio_content = 0.95 # the ratio of content images you want to use for training\n",
+        "train_ratio_content = 0.99 # the ratio of content images you want to use for training\n",
         "train_ratio_style = 0.8 # the ratio of style images you want to use for training"
       ],
       "metadata": {
         "id": "XJM34rAJrLZl"
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "\"\"\" DON'T CHANGE THESE \"\"\"\n",
+        "\n",
         "cnn_normalization_mean = [0.485, 0.456, 0.406]\n",
         "cnn_normalization_std = [0.229, 0.224, 0.225]\n",
         "width = 256\n",
@@ -129,13 +131,13 @@
       "metadata": {
         "id": "X2sc82MV2pUr"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Here we have defined a function that will download the desired number of content images from the COCO dataset and store them in the provided folder:"
+        "A function that will download the desired number of content images from the COCO dataset and store them in the provided folder:"
       ],
       "metadata": {
         "id": "Mw7leMVCxcz2"
@@ -143,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "id": "_dEb2uAAqRQd"
       },
@@ -181,7 +183,6 @@
         "    # extracting images\n",
         "    print(\"Extracting images...\")\n",
         "    with zipfile.ZipFile(images_path, \"r\") as zip_ref:\n",
-        "        # extracting only the specified number of images\n",
         "        selected_images = zip_ref.infolist()[:number_of_images]\n",
         "        zip_ref.extractall(dataset_dir, members=selected_images)\n",
         "\n",
@@ -239,7 +240,7 @@
       "metadata": {
         "id": "k-AnbeWhw2yZ"
       },
-      "execution_count": 36,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -255,22 +256,22 @@
       "cell_type": "code",
       "source": [
         "def move_files_within_folder(source_folder, destination_folder):\n",
-        "    # Get the absolute paths for the source and destination folders\n",
+        "    # get the absolute paths for the source and destination folders\n",
         "    source_folder_abs = os.path.abspath(source_folder)\n",
         "    destination_folder_abs = os.path.join(source_folder_abs, destination_folder)\n",
         "\n",
-        "    # Create the destination folder if it doesn't exist\n",
+        "    # create the destination folder if it doesn't exist\n",
         "    if not os.path.exists(destination_folder_abs):\n",
         "        os.makedirs(destination_folder_abs)\n",
         "\n",
-        "    # Get the list of files in the source folder\n",
+        "    # get the list of files in the source folder\n",
         "    files = os.listdir(source_folder_abs)\n",
         "\n",
         "    for file_name in files:\n",
-        "        # Get the absolute path of the current file\n",
+        "        # get the absolute path of the current file\n",
         "        file_abs_path = os.path.join(source_folder_abs, file_name)\n",
         "\n",
-        "        # Check if the current item is a file (not a directory)\n",
+        "        # check if the current item is a file (not a directory)\n",
         "        if os.path.isfile(file_abs_path):\n",
         "            # Move the file to the destination folder\n",
         "            shutil.move(file_abs_path, os.path.join(destination_folder_abs, file_name))"
@@ -278,21 +279,7 @@
       "metadata": {
         "id": "HN7bFF6NGvFP"
       },
-      "execution_count": 43,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "source_folder = dataset_dir + \"_train\"\n",
-        "destination_folder = dataset_dir + \"_train/train\"\n",
-        "\n",
-        "move_files_within_folder(source_folder, destination_folder)"
-      ],
-      "metadata": {
-        "id": "gWjs27EPInMW"
-      },
-      "execution_count": 44,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -307,17 +294,16 @@
     {
       "cell_type": "code",
       "source": [
-        "download_and_extract_coco(dataset_dir, number_of_images)\n",
-        "split_dataset(dataset_dir+\"/train2017\", train_ratio_content)"
+        "download_and_extract_coco(dataset_dir, number_of_images)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "F_DRyKiA8V9E",
-        "outputId": "691243be-950f-4ba5-b37a-b37ceabefc8b"
+        "outputId": "451b63d2-f306-4898-f47b-a8bc374c8a5d"
       },
-      "execution_count": 37,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,12 +321,49 @@
     {
       "cell_type": "code",
       "source": [
+        "split_dataset(dataset_dir+\"/train2017\", train_ratio_content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aiXE7-gltnmz",
+        "outputId": "020ce76a-e5f6-4e66-c072-9d035fc317ca"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset has been split into train and validation sets!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "source_folder = dataset_dir + \"_train\"\n",
+        "destination_folder = dataset_dir + \"_train/train\"\n",
+        "\n",
+        "move_files_within_folder(source_folder, destination_folder)"
+      ],
+      "metadata": {
+        "id": "gWjs27EPInMW"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "content_dataset = torchvision.datasets.ImageFolder(root= dataset_dir + \"_train\", transform= data_transform)"
       ],
       "metadata": {
         "id": "azk6QjVQyYo3"
       },
-      "execution_count": 45,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -366,7 +389,7 @@
         "id": "hGgO8YgN2bn2",
         "outputId": "f3f7072c-af5d-4848-8641-8a441519d327"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
