Added functions to split the style dataset properly as well as providing commentary on what is happening at each stage.

--- a/creating_datasets.ipynb
+++ b/creating_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOrdk8+t5JwXssb3Xf94RMc",
+      "authorship_tag": "ABX9TyM+yHu6SKt7WS9waoc1DHq3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "aJ51dOYoxBuO"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -76,9 +76,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KA9vEqte4UYd",
-        "outputId": "fb740829-079c-47de-8e13-1250b4d6a90d"
+        "outputId": "416c0d7d-335a-46a7-837f-70f0cbba07ba"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "XJM34rAJrLZl"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -131,8 +131,17 @@
       "metadata": {
         "id": "X2sc82MV2pUr"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Helper functions"
+      ],
+      "metadata": {
+        "id": "dEydUOCcuiVP"
+      }
     },
     {
       "cell_type": "markdown",
@@ -145,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "_dEb2uAAqRQd"
       },
@@ -205,6 +214,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from IPython.utils.path import target_update\n",
         "def split_dataset(dataset_dir, train_ratio):\n",
         "    # create directories for train and validation sets\n",
         "    if \"/train2017\" in dataset_dir:\n",
@@ -214,8 +224,11 @@
         "      train_dir = dataset_dir + \"_train\"\n",
         "      val_dir = dataset_dir + \"_val\"\n",
         "\n",
-        "    os.makedirs(train_dir, exist_ok=True)\n",
-        "    os.makedirs(val_dir, exist_ok=True)\n",
+        "    if not os.path.exists(train_dir):\n",
+        "      os.makedirs(train_dir, exist_ok=True)\n",
+        "\n",
+        "    if not os.path.exists(val_dir):\n",
+        "      os.makedirs(val_dir, exist_ok=target_update)\n",
         "\n",
         "    # get the list of files in the dataset directory\n",
         "    files = os.listdir(dataset_dir)\n",
@@ -226,7 +239,7 @@
         "    train_count = int(train_ratio * total_files)\n",
         "    val_count = total_files - train_count\n",
         "\n",
-        "    # move files to the train and validation directories\n",
+        "    # move files to the created train and validation directories\n",
         "    for i, file in enumerate(files):\n",
         "        src_path = os.path.join(dataset_dir, file)\n",
         "        if i < train_count:\n",
@@ -240,7 +253,7 @@
       "metadata": {
         "id": "k-AnbeWhw2yZ"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +292,7 @@
       "metadata": {
         "id": "HN7bFF6NGvFP"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -303,7 +316,7 @@
         "id": "F_DRyKiA8V9E",
         "outputId": "451b63d2-f306-4898-f47b-a8bc374c8a5d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +343,7 @@
         "id": "aiXE7-gltnmz",
         "outputId": "020ce76a-e5f6-4e66-c072-9d035fc317ca"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,8 +365,31 @@
       "metadata": {
         "id": "gWjs27EPInMW"
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(os.listdir(destination_folder)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KSu9BVtonWLz",
+        "outputId": "137a4819-4751-4963-add7-43086a4a4b91"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9899\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -363,7 +399,7 @@
       "metadata": {
         "id": "azk6QjVQyYo3"
       },
-      "execution_count": 21,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -376,35 +412,196 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "First we clone the repository from GitHub:"
+      ],
+      "metadata": {
+        "id": "L2qBz789rvvY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/badbloody/diplomskiSlike\n",
-        "\n",
-        "style_dataset = torchvision.datasets.ImageFolder('/content/gdrive/MyDrive/diplomskiSlike', transform= data_transform)"
+        "!git clone https://github.com/badbloody/diplomskiSlike"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hGgO8YgN2bn2",
-        "outputId": "f3f7072c-af5d-4848-8641-8a441519d327"
+        "outputId": "993f2d54-3acd-4734-932b-4d051e0047fc"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'diplomskiSlike'...\n",
-            "remote: Enumerating objects: 48, done.\u001b[K\n",
-            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
-            "remote: Total 48 (delta 1), reused 2 (delta 0), pack-reused 42\u001b[K\n",
-            "Receiving objects: 100% (48/48), 89.31 MiB | 42.86 MiB/s, done.\n",
-            "Resolving deltas: 100% (1/1), done.\n"
+            "fatal: destination path 'diplomskiSlike' already exists and is not an empty directory.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here we define the paths of our folders - the `source_folder` being the one which we cloned from GitHub; the `train_folder` and `val_folder`are the paths where we will store the datasets after the split - they don't have to exist, the function `split_style_dataset` will create them."
+      ],
+      "metadata": {
+        "id": "yHljhSC_s2ai"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "source_folder = '/content/diplomskiSlike'\n",
+        "train_folder = '/content/style_train'\n",
+        "val_folder = '/content/style_val'"
+      ],
+      "metadata": {
+        "id": "AnjLAVxCtNCf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A function that will split our style images into train and val; it is different from the function we used for the splitting the content images due to having multiple classes in our style dataset."
+      ],
+      "metadata": {
+        "id": "F-Lnhldlt_aP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_style_dataset(source_folder, train_folder, val_folder, validation_split=0.2, random_seed=None):\n",
+        "    if not os.path.exists(source_folder):\n",
+        "        print(\"Source folder does not exist.\")\n",
+        "        return\n",
+        "\n",
+        "    if not os.path.exists(train_folder):\n",
+        "        os.makedirs(train_folder)\n",
+        "\n",
+        "    if not os.path.exists(val_folder):\n",
+        "        os.makedirs(val_folder)\n",
+        "\n",
+        "    class_folders = [folder for folder in os.listdir(source_folder) if os.path.isdir(os.path.join(source_folder, folder))]\n",
+        "\n",
+        "    if random_seed is not None:\n",
+        "        random.seed(random_seed)\n",
+        "\n",
+        "    for class_folder in class_folders:\n",
+        "        class_source_path = os.path.join(source_folder, class_folder)\n",
+        "        class_train_path = os.path.join(train_folder, class_folder)\n",
+        "        class_val_path = os.path.join(val_folder, class_folder)\n",
+        "\n",
+        "        if not os.path.exists(class_train_path):\n",
+        "            os.makedirs(class_train_path)\n",
+        "\n",
+        "        if not os.path.exists(class_val_path):\n",
+        "            os.makedirs(class_val_path)\n",
+        "\n",
+        "        images = [img for img in os.listdir(class_source_path) if img.endswith('.jpg') or img.endswith('.png')]\n",
+        "\n",
+        "        num_val_samples = int(len(images) * validation_split)\n",
+        "        val_samples = random.sample(images, num_val_samples)\n",
+        "        train_samples = [img for img in images if img not in val_samples]\n",
+        "\n",
+        "        for img in val_samples:\n",
+        "            src_path = os.path.join(class_source_path, img)\n",
+        "            dest_path = os.path.join(class_val_path, img)\n",
+        "            shutil.copy(src_path, dest_path)\n",
+        "\n",
+        "        for img in train_samples:\n",
+        "            src_path = os.path.join(class_source_path, img)\n",
+        "            dest_path = os.path.join(class_train_path, img)\n",
+        "            shutil.copy(src_path, dest_path)\n",
+        "\n",
+        "    print(\"Split completed!\")"
+      ],
+      "metadata": {
+        "id": "S-UH3Z85m2q4"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "split_style_dataset(source_folder, train_folder, val_folder, validation_split=0.2, random_seed=42)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MyGK6j_Knt2c",
+        "outputId": "263c6320-a3f9-4021-b270-562946dcf648"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Split completed!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There is an error when calling `torchvision.datasets.ImageFolder` due to there being some .git files in our folders, so here is a helper function to get rid of them"
+      ],
+      "metadata": {
+        "id": "OjpwGYmCqau7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_git_folders(directory):\n",
+        "    for root, dirs, _ in os.walk(directory):\n",
+        "        if '.git' in dirs:\n",
+        "            git_folder_path = os.path.join(root, '.git')\n",
+        "            shutil.rmtree(git_folder_path)\n",
+        "            print(f\"Removed .git folder at: {git_folder_path}\")\n",
+        "            dirs.remove('.git')\n",
+        "\n",
+        "directory_to_clean = '/content/style_train'\n",
+        "remove_git_folders(directory_to_clean)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p4XCYLpwpcLO",
+        "outputId": "0ceffd9e-a704-4ff6-b64d-070dbf695dc9"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Removed .git folder at: /content/style_train/.git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "style_dataset = torchvision.datasets.ImageFolder(train_folder, transform= data_transform)"
+      ],
+      "metadata": {
+        "id": "VzToTlB6njkQ"
+      },
+      "execution_count": 31,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
