Included the train_ratio_style parameter in the code.

--- a/creating_datasets.ipynb
+++ b/creating_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM+yHu6SKt7WS9waoc1DHq3",
+      "authorship_tag": "ABX9TyMs93I6CbwcP3hD+hUFUS2y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -531,16 +531,16 @@
     {
       "cell_type": "code",
       "source": [
-        "split_style_dataset(source_folder, train_folder, val_folder, validation_split=0.2, random_seed=42)"
+        "split_style_dataset(source_folder, train_folder, val_folder, validation_split=1-train_ratio_style, random_seed=42)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MyGK6j_Knt2c",
-        "outputId": "263c6320-a3f9-4021-b270-562946dcf648"
+        "outputId": "7b419259-2768-4b2d-db1c-9dfb66fd7563"
       },
-      "execution_count": 29,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
