Fixed error where calculate_fid returned a wrong value and also changed the batch_size to fit our images

--- a/fid_score.ipynb
+++ b/fid_score.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNk9Hb9OKbIabxjTf8IK4Oc",
+      "authorship_tag": "ABX9TyPjWbRm7AbLCWGd4Oe80RjO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HT75BfvIAHbc",
-        "outputId": "3144b581-7c12-426a-d927-fbdbbda2f799"
+        "outputId": "90fce3ce-c11d-4d02-f635-54f107bc16af"
       },
       "execution_count": 1,
       "outputs": [
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "WY5o1FywwFaL"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -92,14 +92,14 @@
       "metadata": {
         "id": "pCPKDjJ3wGfs"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# calculate frechet inception distance\n",
-        "def calculate_fid(model, images1, images2, batch_size=32):\n",
+        "def calculate_fid(model, images1, images2, batch_size=2):\n",
         "    act1_list = []\n",
         "    act2_list = []\n",
         "    for i in range(0, len(images1), batch_size):\n",
@@ -131,12 +131,12 @@
         "\n",
         "    # calculate score\n",
         "    fid = ssdiff + trace(sigma1 + sigma2 - 2.0 * covmean)\n",
-        "    return f"
+        "    return fid"
       ],
       "metadata": {
         "id": "5SceV5PUwIYX"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
         "images2 = preprocess_input(images2)\n",
         "images3 = preprocess_input(images3)\n",
         "\n",
-        "batch_size = 32\n",
+        "batch_size = 2\n",
         "fid = calculate_fid(model, images1, images2, batch_size)\n",
         "print('FID of original method: %.3f' % fid)\n",
         "\n",
@@ -203,21 +203,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IyaoKzMdtsEl",
-        "outputId": "ba1e4eec-f95e-43b2-f6d6-03020aaeb695"
+        "outputId": "17415649-652d-44fd-952f-7a6ab1e16f4d"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/inception_v3/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "87910968/87910968 [==============================] - 5s 0us/step\n",
-            "1/1 [==============================] - 11s 11s/step\n",
-            "1/1 [==============================] - 0s 35ms/step\n",
+            "1/1 [==============================] - 1s 1s/step\n",
+            "1/1 [==============================] - 0s 31ms/step\n",
+            "1/1 [==============================] - 0s 33ms/step\n",
+            "1/1 [==============================] - 0s 29ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "1/1 [==============================] - 0s 29ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 31ms/step\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
             "FID of original method: 459.828\n",
-            "1/1 [==============================] - 0s 470ms/step\n",
+            "1/1 [==============================] - 1s 512ms/step\n",
+            "1/1 [==============================] - 0s 29ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "1/1 [==============================] - 0s 26ms/step\n",
+            "1/1 [==============================] - 0s 29ms/step\n",
             "1/1 [==============================] - 0s 35ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
+            "1/1 [==============================] - 0s 28ms/step\n",
             "FID of my method: 364.391\n"
           ]
         }
